Coverity analysis defect 20246: Uninitialized scalar variable

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Minor - P4
    • 3.0.0
    • Affects Version/s: None
    • Component/s: Diagnostics
    • Fully Compatible
    • ALL
    • Sharding 10 (02/19/16), Sharding 11 (03/11/16)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      A new defect has been detected and assigned to schwerin in Coverity Connect.
      http://coverity.mongodb.com//sourcebrowser.htm?projectId=10001#mergedDefectId=20246
      The defect was flagged by checker UNINIT in
      file /src/mongo/db/commands/storage_details.cpp
      function mongo::<unnamed>::RecPos::from(int, int, int, const mongo::<unnamed>::AnalyzeParams &)
      and this ticket was created by schwerin

            Assignee:
            Andy Schwerin (Inactive)
            Reporter:
            auto
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: