SERVER-13040 Fix use of uninitialized value in storageDetails command.